--- a/4. Getting More Advanced with Design/2. Display and Positioning/index.html
+++ b/4. Getting More Advanced with Design/2. Display and Positioning/index.html
@@ -1,71 +1,114 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Davie JR's Menu</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,500,700|Oswald:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="reset.css">
+  <title>Please Participate in Our Survey!</title>
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
 
-  <!-- Navigation Section -->
+  <header>
+    <ul>
+      <li>Question 1</li>
+      <li>Question 2</li>
+      <li>Question 3</li>
+      <li>Question 4</li>
+      <li>Question 5</li>
+      <li>Question 6</li>
+    </ul>
+  </header>
 
-  <nav>
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-6/htmlcss1-img_burger-logo.svg" />
-    <span><a href="#">MENU</a></span>
-    <span><a href="#">NUTRITION</a></span>
-    <span><a href="#">ORDER</a></span>
-    <span><a href="#">LOCATIONS</a></span>
-  </nav>
+  <div class="welcome">
+    <h1><strong>Welcome</strong> to our survey!</h1>
+    <p>We're looking forward to getting your answers so we can make sure our products and services are the best they can be!</p>
+  </div>
 
-  <!-- Content Section -->
+  <div class="question">
+    <h4>Question 1</h4>
+    <h2>I like participating in physical activity such as running, swimming, or biking.</h2>
 
-  <div class="content">
-
-    <!-- Content Header -->
-
-    <div class="header">
-      <h1>BBQ BACON BURGER</h1>
+    <div class="answer">
+      <h3>Disagree</h3>
     </div>
 
-    <!-- Content Body -->
+    <div class="answer">
+      <h3>Neutral</h3>
+    </div>
 
-    <div class="body">
-      <p>
-        Our BBQ Bacon Burger features our special house ground blend of wagyu and sirloin, spiced perfectly, and finished off with just a drop of white truffle oil. A butter grilled brioche bun layered with roasted red onion, perfectly crispy pork belly, and our hickory smoked BBQ sauce.
-      </p>
-
-      <!-- Order Button -->
-
-      <a href="#" class="button">ORDER NOW</a>
-
-      <!-- Nutrition Information -->
-
-      <ul class="nutrition">
-        <li>
-          <span class="category">CALORIES</span>
-          <span class="value">678</span>
-        </li>
-        <li>
-          <span class="category">FAT</span>
-          <span class="value">32</span>
-        </li>
-        <li>
-          <span class="category">PROTEIN</span>
-          <span class="value">8</span>
-        </li>
-        <li>
-          <span class="category">CARBOHYDRATES</span>
-          <span class="value">34</span>
-        </li>
-        <li>
-          <span class="category">SODIUM</span>
-          <span class="value">112</span>
-        </li>
-      </ul>
+    <div class="answer">
+      <h3>Agree</h3>
     </div>
   </div>
 
+  <div class="question">
+    <h4>Question 2</h4>
+    <h2>I try to keep up to date with the latest fashion in active wear.</h2>
+
+    <div class="answer">
+      <h3>Disagree</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Neutral</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Agree</h3>
+    </div>
+  </div>
+
+  <div class="question">
+    <h4>Question 3</h4>
+    <h2>I purchase clothing online regularly.</h2>
+
+    <div class="answer">
+      <h3>Disagree</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Neutral</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Agree</h3>
+    </div>
+  </div>
+
+  <div class="question">
+    <h4>Question 4</h4>
+    <h2>I try to buy goods that are designed and/or manufactured in my home country.</h2>
+
+    <div class="answer">
+      <h3>Disagree</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Neutral</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Agree</h3>
+    </div>
+  </div>
+
+  <div class="question">
+    <h4>Question 5</h4>
+    <h2>I look to famous athletes when trying to choose what to wear when training.</h2>
+
+    <div class="answer">
+      <h3>Disagree</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Neutral</h3>
+    </div>
+
+    <div class="answer">
+      <h3>Agree</h3>
+    </div>
+  </div>
+<footer>
+  <h3>Thanks for taking our survey!</h3>
+</footer>
 </body>
 </html>
