--- a/4. Getting More Advanced with Design/6. Learn Responsive Design/Project 1 Tsunami Coffee/index.html
+++ b/4. Getting More Advanced with Design/6. Learn Responsive Design/Project 1 Tsunami Coffee/index.html
@@ -1,9 +1,13 @@
-<html>lbvjfigoh 
-    <head>nice
+<html>lbvjfigoh
 
-    </head> 
-    <body>
+<head>
+    nice
+
+</head>
+
+<body>
     hi
     judfhvg
-    </body> 
+</body>
+
 </html>
